--- a/VKClient/Base.lproj/Main.storyboard
+++ b/VKClient/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,79 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="VKClient" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ubd-rc-OPt">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fZt-q7-VRN">
+                                        <rect key="frame" x="107" y="168" width="200" height="34"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="lRo-JK-9dr"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fhv-f0-KRD">
+                                        <rect key="frame" x="107" y="230" width="200" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VK app" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hfB-3b-2lg">
+                                        <rect key="frame" x="153.5" y="76" width="107" height="41"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JEj-4l-OFh">
+                                        <rect key="frame" x="188" y="708" width="38" height="30"/>
+                                        <state key="normal" title="Login"/>
+                                        <connections>
+                                            <action selector="activateLoginActionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bez-At-VX8"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="top" secondItem="fZt-q7-VRN" secondAttribute="bottom" constant="28" id="8Tn-kT-P4u"/>
+                                    <constraint firstItem="JEj-4l-OFh" firstAttribute="centerX" secondItem="Fhv-f0-KRD" secondAttribute="centerX" id="CGU-ef-nXH"/>
+                                    <constraint firstAttribute="width" secondItem="fZt-q7-VRN" secondAttribute="width" multiplier="2.07" id="D4V-Qo-Sjn"/>
+                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="centerX" secondItem="fZt-q7-VRN" secondAttribute="centerX" id="PQS-Wp-MVD"/>
+                                    <constraint firstItem="JEj-4l-OFh" firstAttribute="top" secondItem="Fhv-f0-KRD" secondAttribute="bottom" constant="444" id="Ppk-fC-qzk"/>
+                                    <constraint firstAttribute="trailing" secondItem="hfB-3b-2lg" secondAttribute="trailing" constant="113.5" id="Qsh-cR-pyt"/>
+                                    <constraint firstItem="hfB-3b-2lg" firstAttribute="top" secondItem="ubd-rc-OPt" secondAttribute="top" constant="76" id="U81-OU-u4D"/>
+                                    <constraint firstItem="Fhv-f0-KRD" firstAttribute="width" secondItem="fZt-q7-VRN" secondAttribute="width" id="WAn-Mh-Ihz"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="top" secondItem="hfB-3b-2lg" secondAttribute="bottom" constant="51" id="ZsF-0Y-JRP"/>
+                                    <constraint firstItem="fZt-q7-VRN" firstAttribute="centerX" secondItem="hfB-3b-2lg" secondAttribute="centerX" id="gmZ-PE-gl0"/>
+                                    <constraint firstItem="hfB-3b-2lg" firstAttribute="centerX" secondItem="ubd-rc-OPt" secondAttribute="centerX" id="nWZ-WQ-Q9q"/>
+                                    <constraint firstAttribute="bottom" secondItem="JEj-4l-OFh" secondAttribute="bottom" constant="104" id="nh2-Nd-O5J"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="V66-Tu-eTy"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="4PF-Pe-4vF"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ubd-rc-OPt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="M8h-Nh-mVr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ubd-rc-OPt" secondAttribute="trailing" id="QN0-tU-lEp"/>
+                            <constraint firstItem="ubd-rc-OPt" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="RDj-96-uTS"/>
+                            <constraint firstItem="ubd-rc-OPt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qfp-AZ-Zef"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="AppNameTitle" destination="hfB-3b-2lg" id="1qU-gh-jG4"/>
+                        <outlet property="loginActionButton" destination="JEj-4l-OFh" id="ViW-zH-JKQ"/>
+                        <outlet property="loginField" destination="fZt-q7-VRN" id="4Wj-Fj-RKH"/>
+                        <outlet property="loginPageScrollView" destination="ubd-rc-OPt" id="htG-zC-pLQ"/>
+                        <outlet property="passwordField" destination="Fhv-f0-KRD" id="SiK-Qu-ecI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
         </scene>
     </scenes>
 </document>
