--- a/VKClient/Base.lproj/Main.storyboard
+++ b/VKClient/Base.lproj/Main.storyboard
@@ -149,25 +149,25 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="q0L-pw-go2">
-                                                    <rect key="frame" x="304" y="5" width="90" height="90"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c6s-gL-saf" customClass="SmallProfilePicView" customModule="VKClient" customModuleProvider="target">
+                                                    <rect key="frame" x="294" y="0.0" width="100" height="100"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="90" id="dSs-AI-Zxv"/>
-                                                        <constraint firstAttribute="width" secondItem="q0L-pw-go2" secondAttribute="height" multiplier="1:1" id="pVL-yi-7iN"/>
+                                                        <constraint firstAttribute="width" constant="100" id="DPU-W4-ISo"/>
+                                                        <constraint firstAttribute="width" secondItem="c6s-gL-saf" secondAttribute="height" multiplier="1:1" id="Z19-Hh-A34"/>
                                                     </constraints>
-                                                </imageView>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="q0L-pw-go2" secondAttribute="trailing" constant="20" id="1qG-uY-9Za"/>
-                                                <constraint firstItem="q0L-pw-go2" firstAttribute="centerY" secondItem="JNx-ls-DYH" secondAttribute="centerY" id="oxS-CN-wtF"/>
+                                                <constraint firstItem="c6s-gL-saf" firstAttribute="centerY" secondItem="JNx-ls-DYH" secondAttribute="centerY" id="5gt-jB-KcL"/>
+                                                <constraint firstAttribute="trailing" secondItem="c6s-gL-saf" secondAttribute="trailing" constant="20" id="pji-ti-gsH"/>
                                                 <constraint firstItem="E8E-vM-MVT" firstAttribute="leading" secondItem="JNx-ls-DYH" secondAttribute="leading" constant="20" id="uCY-EU-cRH"/>
                                                 <constraint firstItem="E8E-vM-MVT" firstAttribute="centerY" secondItem="JNx-ls-DYH" secondAttribute="centerY" id="w51-bc-eZ5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="userName" destination="E8E-vM-MVT" id="RJo-N6-VZr"/>
-                                            <outlet property="userPic" destination="q0L-pw-go2" id="jmP-yR-pGQ"/>
-                                            <segue destination="ZvX-V3-ESZ" kind="show" id="vnx-in-042"/>
+                                            <outlet property="userPic" destination="c6s-gL-saf" id="4Vr-ye-L25"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -190,67 +190,68 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IHf-gI-gz7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2620" y="-244"/>
+            <point key="canvasLocation" x="2618.840579710145" y="-244.41964285714283"/>
         </scene>
-        <!--Friend Page View Controller-->
-        <scene sceneID="ypD-ag-oCW">
+        <!--Friends Page View Controller-->
+        <scene sceneID="xrQ-DT-CJK">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qjb-b5-7Jc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <viewController id="ZvX-V3-ESZ" customClass="FriendPageViewController" customModule="VKClient" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="dlp-Av-e9C">
+                <viewController id="DSg-3i-k0O" customClass="FriendsPageViewController" customModule="VKClient" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qsC-RI-70G">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JZd-AQ-wAh">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qYC-IH-tQS">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7Mo-Nf-ABy">
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PTe-5v-7te">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jkz-hC-Sj1">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Qfc-2o-C8x" customClass="FriendPageCell" customModule="VKClient" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="yjp-Ss-r9Y">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dYi-kt-TxP">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bG0-AF-bTt">
-                                                    <rect key="frame" x="4" y="4" width="120" height="120"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nUJ-2g-e05">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="bG0-AF-bTt" secondAttribute="height" multiplier="1:1" id="J7q-2t-tPC"/>
-                                                        <constraint firstAttribute="width" constant="120" id="Nt4-6Y-1BO"/>
+                                                        <constraint firstAttribute="height" constant="100" id="Lgg-PN-LOS"/>
+                                                        <constraint firstAttribute="width" constant="100" id="gyh-0X-oLP"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="bG0-AF-bTt" firstAttribute="centerX" secondItem="yjp-Ss-r9Y" secondAttribute="centerX" id="3AO-Lb-3Ji"/>
-                                                <constraint firstItem="bG0-AF-bTt" firstAttribute="centerY" secondItem="yjp-Ss-r9Y" secondAttribute="centerY" id="qgd-Oc-VQy"/>
+                                                <constraint firstAttribute="bottom" secondItem="nUJ-2g-e05" secondAttribute="bottom" id="1rd-RK-XLG"/>
+                                                <constraint firstItem="nUJ-2g-e05" firstAttribute="leading" secondItem="dYi-kt-TxP" secondAttribute="leading" id="2Pc-zk-6XY"/>
+                                                <constraint firstAttribute="trailing" secondItem="nUJ-2g-e05" secondAttribute="trailing" id="Xfz-Jq-CC8"/>
+                                                <constraint firstItem="nUJ-2g-e05" firstAttribute="top" secondItem="dYi-kt-TxP" secondAttribute="top" id="uwO-bF-RRA"/>
                                             </constraints>
                                         </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="userPic" destination="nUJ-2g-e05" id="uS3-G8-3jW"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="JZd-AQ-wAh" firstAttribute="leading" secondItem="jD7-BB-3W1" secondAttribute="leading" id="Dg1-aV-7cT"/>
-                            <constraint firstItem="JZd-AQ-wAh" firstAttribute="top" secondItem="jD7-BB-3W1" secondAttribute="top" id="ISF-P2-F1W"/>
-                            <constraint firstItem="jD7-BB-3W1" firstAttribute="trailing" secondItem="JZd-AQ-wAh" secondAttribute="trailing" id="jPR-tv-Cf2"/>
-                            <constraint firstItem="jD7-BB-3W1" firstAttribute="bottom" secondItem="JZd-AQ-wAh" secondAttribute="bottom" id="rC4-02-Pdd"/>
+                            <constraint firstItem="qYC-IH-tQS" firstAttribute="leading" secondItem="Z9L-d9-jpI" secondAttribute="leading" id="13q-nW-306"/>
+                            <constraint firstItem="Z9L-d9-jpI" firstAttribute="bottom" secondItem="qYC-IH-tQS" secondAttribute="bottom" id="CyJ-8S-mcv"/>
+                            <constraint firstItem="Z9L-d9-jpI" firstAttribute="trailing" secondItem="qYC-IH-tQS" secondAttribute="trailing" id="RLo-4I-zEV"/>
+                            <constraint firstItem="qYC-IH-tQS" firstAttribute="top" secondItem="Z9L-d9-jpI" secondAttribute="top" id="iFL-Be-Sb6"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="jD7-BB-3W1"/>
+                        <viewLayoutGuide key="safeArea" id="Z9L-d9-jpI"/>
                     </view>
-                    <navigationItem key="navigationItem" id="2Qg-YH-xkd"/>
-                    <connections>
-                        <outlet property="friendPhoto" destination="JZd-AQ-wAh" id="Slw-il-lzw"/>
-                    </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cu9-dA-AGr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3415.9420289855075" y="-244.41964285714283"/>
+            <point key="canvasLocation" x="3455" y="-244"/>
         </scene>
         <!--Groups-->
         <scene sceneID="Dk2-Qy-d25">
@@ -294,24 +295,25 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WWS-oc-dKS">
-                                                    <rect key="frame" x="304" y="5" width="90" height="90"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1dM-35-77H" customClass="SmallProfilePicView" customModule="VKClient" customModuleProvider="target">
+                                                    <rect key="frame" x="294" y="0.0" width="100" height="100"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="90" id="AQK-my-5Pk"/>
-                                                        <constraint firstAttribute="width" secondItem="WWS-oc-dKS" secondAttribute="height" multiplier="1:1" id="at8-Gu-R6f"/>
+                                                        <constraint firstAttribute="width" secondItem="1dM-35-77H" secondAttribute="height" multiplier="1:1" id="GDI-zd-REm"/>
+                                                        <constraint firstAttribute="width" constant="100" id="fUg-Xd-cQG"/>
                                                     </constraints>
-                                                </imageView>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="WWS-oc-dKS" secondAttribute="trailing" constant="20" id="5Cb-gq-hun"/>
-                                                <constraint firstItem="WWS-oc-dKS" firstAttribute="centerY" secondItem="4nU-HN-Tp7" secondAttribute="centerY" id="I8e-Xf-5CI"/>
+                                                <constraint firstAttribute="trailing" secondItem="1dM-35-77H" secondAttribute="trailing" constant="20" id="HCi-VN-nfr"/>
+                                                <constraint firstItem="1dM-35-77H" firstAttribute="centerY" secondItem="4nU-HN-Tp7" secondAttribute="centerY" id="QcU-em-b3d"/>
                                                 <constraint firstItem="xRh-F7-JBC" firstAttribute="leading" secondItem="4nU-HN-Tp7" secondAttribute="leading" constant="20" id="iqD-9A-Ax4"/>
                                                 <constraint firstItem="xRh-F7-JBC" firstAttribute="centerY" secondItem="4nU-HN-Tp7" secondAttribute="centerY" id="jBp-ev-0dM"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="userName" destination="xRh-F7-JBC" id="2bC-x9-CRL"/>
-                                            <outlet property="userPic" destination="WWS-oc-dKS" id="h70-P7-cPR"/>
+                                            <outlet property="userName" destination="xRh-F7-JBC" id="LZz-cG-HMZ"/>
+                                            <outlet property="userPic" destination="1dM-35-77H" id="908-ro-bYl"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
