--- a/VKClient/Base.lproj/Main.storyboard
+++ b/VKClient/Base.lproj/Main.storyboard
@@ -168,6 +168,7 @@
                                         <connections>
                                             <outlet property="userName" destination="E8E-vM-MVT" id="RJo-N6-VZr"/>
                                             <outlet property="userPic" destination="c6s-gL-saf" id="4Vr-ye-L25"/>
+                                            <segue destination="DSg-3i-k0O" kind="show" identifier="FriendListActionSegue" id="XfZ-6d-n0R"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -201,7 +202,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="qYC-IH-tQS">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PTe-5v-7te">
                                     <size key="itemSize" width="128" height="128"/>
@@ -223,6 +224,10 @@
                                                         <constraint firstAttribute="height" constant="100" id="Lgg-PN-LOS"/>
                                                         <constraint firstAttribute="width" constant="100" id="gyh-0X-oLP"/>
                                                     </constraints>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aEM-C3-Wcr">
+                                                    <rect key="frame" x="-60" y="-14" width="240" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -248,10 +253,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Z9L-d9-jpI"/>
                     </view>
+                    <navigationItem key="navigationItem" id="MrE-R7-9TC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cu9-dA-AGr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3455" y="-244"/>
+            <point key="canvasLocation" x="3416" y="-244"/>
         </scene>
         <!--Groups-->
         <scene sceneID="Dk2-Qy-d25">
@@ -278,8 +284,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7aA-Wx-fWX">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7aA-Wx-fWX">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FriendListCell" id="f9T-H9-A06" customClass="FriendListCell" customModule="VKClient" customModuleProvider="target">
